--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <img src="./img/youtube.png" alt="" width="45"/>
         </div>
         <div class="menu-head">
-          <font style="color: #ff0000; margin-left: 100px;" class="drop">Toàn cầu</font>
+          <font style="color: #ff0000; margin-left: 150px;" class="drop">Toàn cầu</font>
           <span class="drop"
             ><img src="./img/down-arrow.png" alt="" width="10px"  class="drop"/>
           </span>
@@ -267,7 +267,7 @@
                   less than 6 months for a career boost!
                 </center>
               </div>
-              <hr style="width:100%; margin-top: px;">
+              <hr style="width:100%; margin-top: px; opacity: 20%;">
               <br>
               <div>
                 <a href="" style="text-decoration: none; font-weight: 500; color: #110000; font-size: 22px;">Tương lai của trải nghiệm chăm sóc sức khỏe: Sức mạnh của UX</a> <br>
@@ -276,7 +276,7 @@
                    Bởi
                   Charan Babu N, ngày 9 tháng 5 năm 2024
                 </span> 
-                <hr style="width:100%; margin: 30px 0 30px 0;">
+                <hr style="width:100%; margin: 30px 0 30px 0; opacity: 20%;">
                 <a href="" style="text-decoration: none; font-weight: 500; color: #110000; font-size: 22px;">Hướng dẫn tạo giao diện ứng dụng với Flutter UI Design
                  </a> <br>
              
@@ -288,7 +288,7 @@
         </div>
       </div>   
     </div>
-    <hr style="margin-top: 100px;">
+    <div><hr style="margin-top: 100px; width: 600px; opacity: 40%;"></div>
     <footer>
        <div class="container-footer">
         <div class="head-footer">
