--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
         <h1>Coffee Shop</h1>
         <nav>
           <ul>
-            <li><a href="#home">Trang Chủ</a></li>
-            <li><a href="#about">Web Order</a></li>
-            <li><a href="#menu">E-Shop</a></li>
+            <li><a href="index.html">Trang Chủ</a></li>
+            <li><a href="webOrder.html">Menu </a></li>
+
             <li><a href="#contact">Đăng Ký</a></li>
             <li><a href="#contact">Thương Hiệu</a></li>
-            <li><a href="#contact">Công việc</a></li>
           </ul>
         </nav>
       </div>
@@ -89,6 +88,12 @@
         <div style="padding: 20px; color: #cc9966; font-weight: 600">
           <center><span>Tìm hiểu về chúng tôi ►</span></center>
         </div>
+        <center>
+          <img
+            src="https://i.pinimg.com/564x/43/a2/1e/43a21e9ee028b87d54eda4169fd10861.jpg"
+            alt=""
+          />
+        </center>
       </div>
     </section>
 
@@ -100,7 +105,10 @@
           </h4>
         </center>
       </div>
-      <div class="container">
+      <div
+        class="container"
+        style="display: flex; justify-content: space-between"
+      >
         <div class="menu-item" style="margin-bottom: 2rem">
           <img src="https://wegocoffee.com/img/common/figure-1.svg" alt="" />
           <h3>Tiết kiệm thời gian</h3>
