--- a/dangKyGoi.html
+++ b/dangKyGoi.html
@@ -6,25 +6,13 @@
     <title>Coffee Shop</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="responsive.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
   </head>
   <body>
     <header>
       <div class="container">
-        <div class="header-nav">
-          <h1>Coffee Shop</h1>
-          <div class="navigation">
-            <input type="checkbox" id="check" />
-            <label for="check" class="checkbtn">
-              <i class="fas fa-bars"></i>
-            </label>
-          </div>
-        </div>
+        <h1>Coffee Shop</h1>
         <nav>
-          <ul class="menu">
+          <ul>
             <li><a href="index.html">Trang Chủ</a></li>
             <li><a href="webOrder.html">Menu </a></li>
             <li><a href="dangKyGoi.html ">Đăng Ký Gói</a></li>
@@ -81,34 +69,20 @@
       </div>
     </header>
 
-    <section id="home">
-      <div class="container"></div>
-    </section>
-
-    <section id="about">
-      <div class="container topic-page-1">
-        <center>
+    <section class="complex-background">
+      <div class="container">
+        <div class="complex-topic">
+          <h4>Đăng ký ngay để trở thành Rang Rang Subscriber</h4>
           <p>
-            Coffee Shop mang đến phong cách sống hiện đại đi cùng cà phê và công
-            nghệ. Với thiết kế tinh tế và nguyên liệu chọn lọc nhằm mang lại
-            trải nghiệm độc đáo, Coffee Shop mong muốn trở thành điểm nhấn cho
-            một ngày của bạn thêm phần trọn vẹn.
+            Đem cửa hàng cà phê yêu thích của bạn về tận nhà, thưởng thức hương
+            vị cà phê tuyệt hảo theo công thức của riêng bạn
           </p>
-        </center>
-        <div style="padding: 20px; color: #cc9966; font-weight: 600">
-          <center><span>Tìm hiểu về chúng tôi ►</span></center>
+          <a href=""><button>ĐĂNG KÝ NGAY</button></a>
         </div>
       </div>
     </section>
-    <section>
-      <center>
-        <img
-          src="https://wegocoffee.com/img/home/coffee_front.jpg"
-          alt=""
-          width="100%"
-        />
-      </center>
-    </section>
+    <section></section>
+
     <section id="menu" style="padding: 100px 0 100px 0">
       <div style="margin: 50px 50px 100px 50px">
         <center>
@@ -165,6 +139,52 @@
               />
             </svg>
           </span>
+        </div>
+      </div>
+    </section>
+    <section class="complex-background-2">
+      <div class="container">
+        <div class="complex-topic-2">
+          <h4 style="font-size: 32px; font-weight: 600">
+            Cà phê của riêng bạn
+          </h4>
+          <p style="padding: 10px 0 20px 0; font-size: 20px; font-weight: 200">
+            Cùng Rang Rang tìm hiểu sở thích cà phê của bạn
+          </p>
+          <a href=""><button>BÀI PHÂN TÍCH</button></a>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <center>
+          <h2 style="font-size: 32px; font-weight: 600">
+            Chọn loại cà phê nguyên hạt của bạn
+          </h2>
+        </center>
+        <center>
+          <div class="choose-coffee">
+            <div class="btn-choose-coffee">TẤT CẢ</div>
+            <div class="btn-choose-coffee">ESPRESSO</div>
+          </div>
+        </center>
+        <div class="subcription">
+          <div class="menu-sub">
+            <div class="sub-item">
+              <div class="bg-item-1"></div>
+              <h5 style="font-size: 20px; font-weight: 600">
+                ESPRESSO ASSORTMENT
+              </h5>
+              <p style="font-weight: 100">
+                For the home barista who loves to craft a morning cappuccino or
+                pull an afternoon shot, we offer blends and single origins
+                specifically for this brewing method. We rotate our offerings
+                among our four espresso
+              </p>
+              <span><i>Đăng ký bắt đầu lúc 10₫</i></span>
+              <a href=""><button>LỰA CHỌN</button></a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
