--- a/thuongHieu.html
+++ b/thuongHieu.html
@@ -6,25 +6,13 @@
     <title>Coffee Shop</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="responsive.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
   </head>
   <body>
     <header>
       <div class="container">
-        <div class="header-nav">
-          <h1>Coffee Shop</h1>
-          <div class="navigation">
-            <input type="checkbox" id="check" />
-            <label for="check" class="checkbtn">
-              <i class="fas fa-bars"></i>
-            </label>
-          </div>
-        </div>
+        <h1>Coffee Shop</h1>
         <nav>
-          <ul class="menu">
+          <ul>
             <li><a href="index.html">Trang Chủ</a></li>
             <li><a href="webOrder.html">Menu </a></li>
             <li><a href="dangKyGoi.html ">Đăng Ký Gói</a></li>
@@ -82,110 +70,86 @@
     </header>
 
     <section id="home">
-      <div class="container"></div>
-    </section>
-
-    <section id="about">
-      <div class="container topic-page-1">
-        <center>
-          <p>
-            Coffee Shop mang đến phong cách sống hiện đại đi cùng cà phê và công
-            nghệ. Với thiết kế tinh tế và nguyên liệu chọn lọc nhằm mang lại
-            trải nghiệm độc đáo, Coffee Shop mong muốn trở thành điểm nhấn cho
-            một ngày của bạn thêm phần trọn vẹn.
-          </p>
-        </center>
-        <div style="padding: 20px; color: #cc9966; font-weight: 600">
-          <center><span>Tìm hiểu về chúng tôi ►</span></center>
-        </div>
-      </div>
-    </section>
-    <section>
-      <center>
-        <img
-          src="https://wegocoffee.com/img/home/coffee_front.jpg"
-          alt=""
-          width="100%"
-        />
-      </center>
-    </section>
-    <section id="menu" style="padding: 100px 0 100px 0">
-      <div style="margin: 50px 50px 100px 50px">
-        <center>
-          <h4 style="font-size: 26px; font-weight: 600">
-            Đăng ký Gói Coffee Shop Subscribe
-          </h4>
-        </center>
-      </div>
-      <div class="reg-pagkage">
-        <div class="menu-item" style="margin-bottom: 2rem">
-          <img src="https://wegocoffee.com/img/common/figure-1.svg" alt="" />
-          <h3>Tiết kiệm thời gian</h3>
-          <p>
-            Rút ngắn thời gian đặt hàng và lựa chọn đồ uống. Cảm nhận hương vị
-            cà phê thơm ngon được Coffe Shop mang đến mỗi ngày, hách hàng dùng
-            thử hay tín đồ cà phê.
-          </p>
-        </div>
-        <div class="menu-item">
-          <img src="https://wegocoffee.com/img/common/figure-2.svg" alt="" />
-          <h3>Ưu đãi đặc biệt</h3>
-          <p>
-            Coffe Shop mang lại ưu đãi phù hợp nhất cho từng đối tượng, dù bạn
-            là khách hàng riêng lẻ, khách hàng doanh nghiệp, khách hàng dùng thử
-            hay tín đồ cà phê.
-          </p>
-        </div>
-        <div class="menu-item">
-          <img src="https://wegocoffee.com/img/common/figure-3.svg" alt="" />
-          <h3>Tối ưu hóa trải nghiệm</h3>
-          <p>
-            Tùy chỉnh linh hoạt hương vị cà phê mỗi ngày. Tự tay thiết kế ly cà
-            phê tuyệt hảo cho chính mình. Cà phê độc quyền theo phong cách của
-            bạn.
-          </p>
-        </div>
-      </div>
-      <div class="container" style="margin-top: 10px">
-        <div class="btn" style="width: 300px; color: #fff">
-          <span>
-            Lựa chọn gói Wego Subscribe
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-arrow-right"
-              viewBox="0 0 16 16"
-              style="margin-left: 10px"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"
-              />
-            </svg>
-          </span>
-        </div>
-      </div>
-    </section>
-    <section class="Coffeshop">
-      <center><h2>#CoffeeShop</h2></center>
-    </section>
-    <section style="padding: 50px 0 100px 0">
-      <center><h3 style="padding: 0 0 20px 0">Tải ứng dụng</h3></center>
       <div class="container">
-        <center>
-          <img
-            src="https://wegocoffee.com/img/google-play.png"
-            alt=""
-            width="200px"
-          />
-          <img
-            src="https://wegocoffee.com/img/app-store.png"
-            alt=""
-            width="200px"
-          />
-        </center>
+        <div class="topic-container">
+          <div class="topic-4">
+            <div class="element-4">
+              <h1 style="font-size: 32px; font-weight: 600">
+                Hơi thở hiện đại trong từng tách cà phê
+              </h1>
+              <h2 style="font-size: 18px; font-weight: 600">
+                Sự khởi đầu của S-Coffee
+              </h2>
+              <p>
+                S-Coffee được thành lập bởi một nhóm coffeeholic - cụm từ đại
+                diện cho phần đông những người chọn cà phê là một phần của cuộc
+                sống thường nhật.
+              </p>
+              <p>
+                Chúng tôi có mọi thứ mình cần cho một thương hiệu cafe tại Sài
+                Gòn. Kiến thức, chuyên môn và một cộng đồng những người trẻ luôn
+                tìm kiếm cái mới. Chúng tôi tin rằng đây là thời điểm tốt nhất
+                để du nhập một làn sóng cà phê mang lại trải nghiệm dựa trên sự
+                phát triển không ngừng của đô thị.
+              </p>
+              <p>
+                S-Coffee tin cà phê là điều giữ cho mọi thứ cân bằng. Trong nhịp
+                sống đầy biến chuyển, trải nghiệm luôn là sự kết hợp giữa tận
+                hưởng và khám phá. Và không gì tốt hơn việc có một cốc cà phê
+                tuyệt vời bên cạnh đồng hành.
+              </p>
+              <img
+                src="https://wegocoffee.com/img/our-story/coffee-illus.png"
+                alt=""
+                width="384px"
+                style="margin-top: 50px"
+              />
+            </div>
+            <div class="element-4-2">
+              <img
+                src="https://wegocoffee.com/img/our-story/begin.jpg"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="home">
+      <div class="container">
+        <div class="topic-container">
+          <div class="topic-4">
+            <div class="element-4">
+              <h2 style="font-size: 18px; font-weight: 600">
+                3 giá trị tạo nên WeGo
+              </h2>
+              <h5 style="font-size: 12px; font-weight: 700">TRẢI NGHIỆM</h5>
+              <p>
+                Chúng tôi tin rằng ngoài hương vị, sự quen thuộc là thứ mọi
+                người tìm kiếm trong mỗi cốc cà phê. Đó là độ ổn định về chất
+                lượng; độ cân bằng của hương vị; và mùi thơm đặc trưng của từng
+                loại hạt.
+              </p>
+              <h5 style="font-size: 12px; font-weight: 700">THÀNH THỊ</h5>
+              <p>
+                WeGo theo đuổi việc trở thành một phần của lối sống đô thị.
+                Hướng đến sự tiện lợi và linh hoạt, WeGo cung cấp một không gian
+                tối ưu hoá cho công việc và những buổi gặp gỡ bạn bè.
+              </p>
+              <h5 style="font-size: 12px; font-weight: 700">THIẾT KẾ</h5>
+              <p>
+                Ở WeGo, tiêu chuẩn được chúng tôi đặt lên hàng đầu. Điều đó hiện
+                diện trong mọi thứ: từ hình ảnh, sản phẩm cho đến không gian
+                quán. Một nét giao thoa giữa sự hiện đại và chủ nghĩa tối giản
+                (minimalism).
+              </p>
+            </div>
+            <div class="element-4-2">
+              <div></div>
+              <img src="https://wegocoffee.com/img/our-story/mix.jpg" alt="" />
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <hr />
